assets/styles/main.scss
@import 'reset';
@import 'transitions';
@import 'typography';
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');

$background: #333333;
$color: #ededed;
$bg-code: #2d2d2d;
$action: #008cff;

body{
  font-family: 'IBM Plex Mono', monospace;
  background: $background;
  color: $color;
  font-weight: 400;
}

a{
  color: $action;
  text-decoration: none;
  font-weight: 700;
  cursor: pointer;
}

.container{
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.title{
  padding: .5rem;
  font-size: 1.25rem;
  margin: 0;
}

.action{
  font-family: 'IBM Plex Mono', monospace;
  background: $action;
  color: $color;
  font-weight: 700;
  text-transform: uppercase;
  padding: .5rem 1.5rem;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  &:disabled,&[disabled]{
    color: rgba($color,.5);
    cursor: not-allowed;
  }
  svg{
    margin-right: .5rem;
  }
}
.header-area{
  display: flex;
  box-sizing: border-box;
  position: sticky;
  width: 100%;
  top: 0;
  background: rgba(darken($background,10%),.3);
  backdrop-filter: blur(6px);
  flex-direction: column;
  z-index: 2;
}
.main-area{
  flex: 1;
  display: flex;
  flex-direction: column;
}
.footer-area{
position: fixed;
width: 100%;
bottom: 0;
right: 0;
padding: .25rem .5rem;
justify-content: flex-end;
font-size: .8rem;
text-align: right;
}

.code-area{
  flex: 1;
  margin-bottom: 1.75rem;
  position: relative;
}


.codecontent{
 flex: 1;
 max-height: 100%;
 background: $bg-code;
}

.actions-bar{
  display: flex;
  .clipboard{
    flex:1;
    background: rgba($color,.2);
    padding:.5rem;
  }
}

.toasted svg{
  margin-right: 1rem;
}

.loading-page {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba($background, 0.8);
  text-align: center;
  padding-top: 200px;
  font-size: 3rem;
  font-family: sans-serif;
  z-index: 1000;
  color:$action;
}

.jumbo{
  background: $action;
  min-height: 35vh;
  padding: 1rem;
  display: flex;
  align-items: flex-end;
}

.content{
  max-width: 600px;
  padding: 1rem;
  margin: 2rem auto;
}

/* width */
::-webkit-scrollbar {
  width: .75rem;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(darken($background,10%),.3);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(darken($background,10%),.6);
  border-radius: .375rem;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: darken($background,10%);
}

